--- a/main/templates/main/administration.html
+++ b/main/templates/main/administration.html
@@ -22,9 +22,8 @@
     <div class="row">
     {% for el in users %}
         <a href="create_adm/{{ el.id }}"><div class="col">
-        <button class="btn btn-primary btn-lg"><p>
+        <button class="btn btn-primary btn-lg">
            {{ el.username }} {{ el.first_name }} {{ el.last_name }}
-        </p>
         </button>
         </div></a>
     {% endfor %}
