--- a/main/templates/main/application_true.html
+++ b/main/templates/main/application_true.html
@@ -21,6 +21,19 @@
       <a href="{% url 'application_false' %}"><button style="width: 350px; height: 50px" type="button" class="btn btn-light btn-lg">Отклоненные заявки</button></a>
     </div>
             </div>
+            {% if flag %}
+            <div class="container">
+                <br>
+            <div class="row">
+                <div class="col-5"></div>
+                <div class="col-5">
+
+            <form action="{% url 'application_employee' %}" method="get">
+        <button class="btn btn-primary" type="submit">Сформировать список</button>
+    </form></div>
+            </div>
+            </div>
+            {% endif %}
         </div>
     <br>
       <h2>{{ title }}</h2>
