--- a/main/templates/main/search_results_timetable.html
+++ b/main/templates/main/search_results_timetable.html
@@ -56,7 +56,7 @@
     <div class="col">
         <form method="POST" action="{% url 'create_timetable' %}">
              {% csrf_token %}
-            <input style="height: 40px; width: 150px" type="time" name="time"><br><br>
+            <input required placeholder="Ваше имя" style="height: 40px; width: 150px" type="time" name="time"><br><br>
             <input type="hidden" name="date" value="{{ date }}">
             <input type="hidden" name="id_employee" value="{{ user.id }}">
             <select style="height: 40px; width: 150px" class="form-control form-control-sm" id="exampleFormControlSelect1" name="bool">
@@ -75,10 +75,9 @@
     <div class="col">
        <form method="GET" action="{% url 'delete' %}">
              {% csrf_token %}
-            <input style="height: 40px; width: 150px" type="time" name="time"><br><br>
+            <input required placeholder="Время" style="height: 40px; width: 150px" type="time" name="time"><br><br>
             <input type="hidden" name="date" value="{{ date }}">
             <input type="hidden" name="id_employee" value="{{ user.id }}">
-            
             <br>
             <div class="row">
             <div class="col">
