--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -38,7 +38,7 @@
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <ul class="navbar-nav me-auto mb-2 mb-md-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Дом</a>
+            <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Прием граждан</a>
           </li>
         </ul>
         <div class="align-bottom">
