--- a/main/templates/main/login.html
+++ b/main/templates/main/login.html
@@ -82,7 +82,7 @@
 				<div class="d-flex justify-content-center">
 
 
-					<h3 id="form-title">LOGIN</h3>
+					<h3 id="form-title">Войти</h3>
 				</div>
 				<div class="d-flex justify-content-center form_container">
 					<form method="POST" action="">
@@ -101,7 +101,7 @@
 						</div>
 
 							<div class="d-flex justify-content-center mt-3 login_container">
-				 				<input class="btn login_btn" type="submit" value="Login">
+				 				<input class="btn login_btn" type="submit" value="Войти">
 				   			</div>
 					</form>
 
@@ -111,7 +111,7 @@
 				{% endfor %}
 				<div class="mt-4">
 					<div class="d-flex justify-content-center links">
-						Don't have an account? <a href="{% url 'register' %}" class="ml-2">Sign Up</a>
+						Нет аккаунта? <a href="{% url 'register' %}" class="ml-2">Регистрация</a>
 					</div>
 
 				</div>
