--- a/main/templates/main/register.html
+++ b/main/templates/main/register.html
@@ -71,7 +71,7 @@
 		<div class="d-flex justify-content-center h-100">
 			<div class="user_card">
 				<div class="d-flex justify-content-center">
-					<h3 id="form-title">REGISTER ACCOUNT</h3>
+					<h3 id="form-title">Регистрация аккаунта</h3>
 				</div>
 				<div class="d-flex justify-content-center form_container">
 
@@ -103,14 +103,14 @@
 						</div>
 
 				   		<div class="d-flex justify-content-center mt-3 login_container">
-				 			<input class="btn login_btn" type="submit" value="Register Account">
+				 			<input class="btn login_btn" type="submit" value="Зарегистрироваться">
 				   		</div>
 					</form>
 				</div>
                 {{form.errors}}
 				<div class="mt-4">
 					<div class="d-flex justify-content-center links">
-						Already have an account? <a href="{% url 'login' %}" class="ml-2">Login</a>
+						Уже сть аккаунт? <a href="{% url 'login' %}" class="ml-2">Войти</a>
 					</div>
 				</div>
 			</div>
@@ -123,10 +123,10 @@
 
 		//Query All input fields
 		var form_fields = document.getElementsByTagName('input')
-		form_fields[1].placeholder='Username..';
-		form_fields[2].placeholder='Email..';
-		form_fields[3].placeholder='Enter password...';
-		form_fields[4].placeholder='Re-enter Password...';
+		form_fields[1].placeholder='Логин..';
+		form_fields[2].placeholder='Почта..';
+		form_fields[3].placeholder='Пароль...';
+		form_fields[4].placeholder='Повторите пароль...';
 
 
 		for (var field in form_fields){
