--- a/main/templates/main/application.html
+++ b/main/templates/main/application.html
@@ -36,7 +36,7 @@
                 <div class="col-md-5"><u>Дата и время приема</u> : {{ application.date_receipt }}</div>
             </div><br>
             <div class="row align-items-start">
-                <div class="col-md-5"><u>Назначенный сотрудник</u> : {{ application.id_employee }}</div>
+                <div class="col-md-5"><u>Назначенный сотрудник</u> : {{ u2.username }}</div>
 
             </div><br>
             <div class="row align-items-start">
